--- a/docs/Data_wrangling_refresh.qmd
+++ b/docs/Data_wrangling_refresh.qmd
@@ -79,3 +79,5 @@ penguins %>%  count (species, island, sex)
 ## Datapasta
 
 Make sure to install packages in console, not in the quarto doc. Otherwise it would reinstall each time (install.packages("datapasta")
+
+When you install a new package, you need to restart R. so make sure to save, pull, push
